--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-config.json
+$ echo debug.log >> .gitignore
+$ git rm --cached config.json
+rm 'debug.log'
+$ git commit -m "Start ignoring config.json"
